--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,29 @@
     <link rel="stylesheet" href="./assets/styles.css">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-    <h1>Foo</h1>
+    <header>
+        <h1 class="bg-gradient-custom p-3 nav justify-content-center">Weather Dashboard</h1>
+    </header>
+    <main>
+        <section>
+            <aside>
+                <h2>search for a city</h2>
+            </aside>
+        </section>
+        <section>Denver (3/15/2007)</section>
+        <section>
+            <h3>5-Day Forecast</h3>
+            <div class="card">3/16/2007</div>
+            <div class="card">3/17/2007</div>
+            <div class="card">3/18/2007</div>
+            <div class="card">3/19/2007</div>
+            <div class="card">3/20/2007</div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src='./assets/script.js'></script>
 </body>
+
 </html>
