--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <link rel="stylesheet" href="./assets/styles.css">
     <title>Weather Dashboard</title>
 </head>
@@ -13,21 +15,81 @@
     <header>
         <h1 class="bg-gradient-custom p-3 nav justify-content-center">Weather Dashboard</h1>
     </header>
-    <main>
-        <section>
-            <aside>
-                <h2>search for a city</h2>
-            </aside>
-        </section>
-        <section>Denver (3/15/2007)</section>
-        <section>
-            <h3>5-Day Forecast</h3>
-            <div class="card">3/16/2007</div>
-            <div class="card">3/17/2007</div>
-            <div class="card">3/18/2007</div>
-            <div class="card">3/19/2007</div>
-            <div class="card">3/20/2007</div>
-        </section>
+    <main class="container">
+        <div class="row">
+            <section class="col-3">
+                <aside>
+                    <h3>search for a city</h3>
+                </aside>
+            </section>
+            <section class="col-9">
+                <div class="card">Denver (3/15/2007)</div>
+                <div class="container">
+                    <div class="row">
+                        <h3>5-Day Forecast</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-text"><i class="fa-regular fa-sun"></i></p>
+                                    <p class="card-text">Temp: 63.55 F</p>
+                                    <p class="card-text">Wind: 35mph</p>
+                                    <p class="card-text">Humidity: 109%</p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-text"><i class="fa-regular fa-sun"></i></p>
+                                    <p class="card-text">Temp: 63.55 F</p>
+                                    <p class="card-text">Wind: 35mph</p>
+                                    <p class="card-text">Humidity: 109%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-text"><i class="fa-regular fa-sun"></i></p>
+                                    <p class="card-text">Temp: 63.55 F</p>
+                                    <p class="card-text">Wind: 35mph</p>
+                                    <p class="card-text">Humidity: 109%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-text"><i class="fa-regular fa-sun"></i></p>
+                                    <p class="card-text">Temp: 63.55 F</p>
+                                    <p class="card-text">Wind: 35mph</p>
+                                    <p class="card-text">Humidity: 109%</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-text"><i class="fa-regular fa-sun"></i></p>
+                                    <p class="card-text">Temp: 63.55 F</p>
+                                    <p class="card-text">Wind: 35mph</p>
+                                    <p class="card-text">Humidity: 109%</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src='./assets/script.js'></script>
