--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
             <section class="col-3">
                 <aside>
                     <h3>search for a city</h3>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
                 </aside>
             </section>
             <section class="col-9">
-                <div class="card">Denver (3/15/2007)</div>
+                <div class="card today-forecast">Denver (3/15/2007)</div>
                 <div class="container">
                     <div class="row">
                         <h3>5-Day Forecast</h3>
