gets coordinates and logs to console

--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
                 <aside>
                     <h3>search for a city</h3>
                     <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
+                        <input type="text" class="form-control" id="search-city" placeholder="enter a city"
+                            value="denver">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <button class="form-control" id="search-city-button" rows="3">Search</button>
                     </div>
                 </aside>
             </section>
