adds API call to get current conditions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </aside>
             </section>
             <section class="col-9">
-                <div class="card today-forecast">Denver (3/15/2007)</div>
+                <div id="current-weather" class="card today-forecast">Denver (3/15/2007)</div>
                 <div class="container">
                     <div class="row">
                         <h3>5-Day Forecast</h3>
