displays forecast, gets five day forecast

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     <div class="row">
                         <h3>5-Day Forecast</h3>
                     </div>
-                    <div class="row">
+                    <div class="row" id="five-days-div">
                         <div class="col-sm-2">
                             <div class="card">
                                 <div class="card-body">
-                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-title">3/16/2007</p>
                                     <p class="card-text"><i class="fa-regular fa-sun"></i></p>
                                     <p class="card-text">Temp: 63.55 F</p>
                                     <p class="card-text">Wind: 35mph</p>
@@ -51,7 +51,7 @@
                         <div class="col-sm-2">
                             <div class="card">
                                 <div class="card-body">
-                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-title">3/16/2007</p>
                                     <p class="card-text"><i class="fa-regular fa-sun"></i></p>
                                     <p class="card-text">Temp: 63.55 F</p>
                                     <p class="card-text">Wind: 35mph</p>
@@ -62,7 +62,7 @@
                         <div class="col-sm-2">
                             <div class="card">
                                 <div class="card-body">
-                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-title">3/16/2007</p>
                                     <p class="card-text"><i class="fa-regular fa-sun"></i></p>
                                     <p class="card-text">Temp: 63.55 F</p>
                                     <p class="card-text">Wind: 35mph</p>
@@ -73,7 +73,7 @@
                         <div class="col-sm-2">
                             <div class="card">
                                 <div class="card-body">
-                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-title">3/16/2007</p>
                                     <p class="card-text"><i class="fa-regular fa-sun"></i></p>
                                     <p class="card-text">Temp: 63.55 F</p>
                                     <p class="card-text">Wind: 35mph</p>
@@ -84,7 +84,7 @@
                         <div class="col-sm-2">
                             <div class="card">
                                 <div class="card-body">
-                                    <p class="card-title">3/16/2007</h5>
+                                    <p class="card-title">3/16/2007</p>
                                     <p class="card-text"><i class="fa-regular fa-sun"></i></p>
                                     <p class="card-text">Temp: 63.55 F</p>
                                     <p class="card-text">Wind: 35mph</p>
