--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <aside>
                     <h3>search for a city</h3>
                     <div class="mb-3">
-                        <input type="text" class="form-control" id="search-city" placeholder="enter a city"
-                            value="denver">
+                        <input type="text" class="form-control" id="search-city" placeholder="enter a city" />
                     </div>
                     <div class="mb-3">
                         <button class="form-control" id="search-city-button" rows="3">Search</button>
@@ -30,7 +29,7 @@
                 </aside>
             </section>
             <section class="col-9">
-                <div id="current-weather" class="card today-forecast">Denver (3/15/2007)</div>
+                <div id="current-weather" class="card today-forecast"></div>
                 <div class="container">
                     <div class="row">
                         <h3>5-Day Forecast</h3>
